Updated NgModule imports

--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "@angular/platform-browser": "4.1.0",
     "@angular/platform-browser-dynamic": "4.1.0",
     "@ionic-native/core": "3.7.0",
+    "@ionic-native/device": "^3.10.2",
     "@ionic-native/in-app-browser": "3.7.0",
-    "@ionic-native/is-debug": "3.7.0",
     "@ionic-native/native-geocoder": "3.7.0",
     "@ionic-native/native-storage": "^3.10.0",
     "@ionic-native/social-sharing": "3.7.0",
